--- a/altsch-presentation/netlify.toml
+++ b/altsch-presentation/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-publish = "dist"
-command = "npm run build"
+  command = "npx slidev build --base /"
+  publish = "dist"
 
 [build.environment]
 NODE_VERSION = "20"
