Add Netlify SPA redirects for Slidev

--- a/altsch-presentation/package.json
+++ b/altsch-presentation/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "slidev build",
+    "postbuild": "cp _redirects dist/",
     "dev": "slidev --open",
     "export": "slidev export"
   },
